--- a/Android/app/src/main/res/layout/fragment_popis_navika.xml
+++ b/Android/app/src/main/res/layout/fragment_popis_navika.xml
@@ -15,50 +15,53 @@
         app:layout_constraintHorizontal_bias="0.283"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.849" />
+        app:layout_constraintVertical_bias="0.774" />
 
     <EditText
         android:id="@+id/editTextNazivNavike"
         android:layout_width="230dp"
         android:layout_height="50dp"
+        android:layout_marginBottom="68dp"
         android:ems="10"
+        android:importantForAutofill="no"
         android:inputType="textPersonName"
         android:text="@string/navika_naziv"
-        android:importantForAutofill="no"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/editTextTipNavike"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.184"
+        app:layout_constraintHorizontal_bias="0.27"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.131"
+        app:layout_constraintVertical_bias="1.0"
         tools:ignore="LabelFor" />
 
     <EditText
         android:id="@+id/editTextTipNavike"
         android:layout_width="230dp"
         android:layout_height="50dp"
+        android:layout_marginTop="156dp"
         android:ems="10"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
+        android:importantForAutofill="no"
         android:inputType="textPersonName"
         android:text="@string/navika_tip"
-        android:importantForAutofill="no"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.201"
+        app:layout_constraintHorizontal_bias="0.27"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.23"
         tools:ignore="LabelFor" />
 
     <Button
         android:id="@+id/btnDodaj"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="148dp"
+        android:layout_marginBottom="136dp"
         android:text="@string/btn_dodaj"
         app:layout_constraintBottom_toTopOf="@+id/recyclerView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.167"
+        app:layout_constraintHorizontal_bias="0.151"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTipNavike"
-        app:layout_constraintVertical_bias="0.164" />
+        app:layout_constraintTop_toTopOf="@+id/editTextNazivNavike" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
